# Cloubit

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc.cjs  .stylelintrc.cjs  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tauri.conf.json  tsconfig.json  unocss.config.ts  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  config.json  crash_handler.rs  error.rs  index.tsx  main.rs  main.tsx
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/libs/: README.md  README.openssl.md
src-tauri/src/: config.json  crash_handler.rs  error.rs  lib.rs  main.rs  stmc.rs  tray.rs
src-tauri/src/api/: artist_songs.rs  audio_match.rs  batch.rs  chorus.rs  likelist.rs  login_qr_check.rs  login_qr_create.rs  login_qr_key.rs  login_refresh.rs  login_status.rs  register_anonimous.rs  related_playlist.rs  router_config.rs  scrobble.rs
src-tauri/src/audio/: backend.rs  engine.rs  mod.rs
src-tauri/src/core/: tray.rs
src-tauri/src/interface/: auth.rs  mod.rs  music.rs
src-tauri/src/manager/: auth.rs
src-tauri/src/models/: resource.rs
src-tauri/src/network/: README.md  crypto.rs  device.rs  header.rs  mod.rs  os.rs  register.rs  request.rs  text.rs
src-tauri/src/service/: auth.rs
src-tauri/src/services/: auth.rs  mod.rs  music.rs
src-tauri/src/storage/: cache.rs  cookie.rs  database.rs  mod.rs
src-tauri/src/util/: cache.rs  crypto.rs  os.rs  request.rs  text.rs
src-tauri/src/utils/: README.md
src/api/: search.ts  song.ts
src/apis/: comment.ts  login.ts  playlist.ts  search.ts  song.ts  user.ts
src/assets/data/: idMeta.json
src/audio/: backend.rs  integration.rs  mod.rs  reader.rs
src/components/Card/: Card.module.scss  index.tsx
src/components/Chip/: Chip.module.scss  index.tsx
src/components/Common/Avatar/: index.tsx
src/components/Common/Button/: Button.module.scss  index.tsx
src/components/Common/Card/: Card.module.scss  index.tsx
src/components/Common/Chip/: index.tsx
src/components/Common/Comment/: Comment.module.scss  index.tsx
src/components/Common/ContextMenu/: index.tsx
src/components/Common/Controls/: Controls.module.scss  Controls.tsx
src/components/Common/LazyImage/: LazyImage.module.scss  index.tsx
src/components/Common/Modal/: Modal.module.scss  index.tsx
src/components/Common/Popover/: Popover.module.scss  index.tsx
src/components/Modal/: Modal.module.scss  index.tsx
src/components/Navbar/: Navbar.module.scss  index.tsx
src/components/PlayBar/: PlayBar.module.scss  index.tsx
src/components/Popover/: index.tsx
src/components/Sidebar/: Sidebar.module.scss  index.tsx
src/components/atoms/: Button.tsx  Checkbox.tsx  Chip.tsx  IconButton.tsx  Image.tsx  Input.tsx  Progress.tsx  Select.tsx
src/components/numerator/: Avatar.tsx
src/components/organisms/: LoadingProgress.tsx  index.tsx
src/components/templates/: Layout.tsx  Lyric.tsx  Navbar.tsx  Playbar.tsx  Playlist.tsx  Search.tsx  Sidebar.tsx
src/context/: EventBusContext.tsx  PlayerContext.tsx  ToastContext.tsx
src/core/: app.rs  main_window.rs  mod.rs  tray.rs
src/hooks/: useTheme.ts
src/managers/: PIPWindowManager.ts  PlayerManager.ts  ShortcutManager.ts  ToastManager.ts  playManager.ts
src/models/: audio.rs  auth.ts  comment.ts  common.ts  http.rs  main.d.ts  search.ts  song.ts  user.ts
src/network/: README.md  crypto.rs  device.rs  header.rs  request.rs
src/pages/: Home.css  Home.tsx  NotFound.module.scss  [...notFound].tsx  index.module.scss  index.tsx
src/pages/album/: Album.module.scss  [id].tsx
src/pages/comment/: Comment.module.scss
src/pages/playlist/: Playlist.module.scss  [id].tsx  daily.tsx  like.tsx
src/pages/search/: Search.module.scss  [keyword].tsx
src/pages/windows/: pip.module.scss  pip.tsx
src/routers/: SuspenseWrapper.tsx  index.tsx
src/routers/utils/: fileRouter.tsx  lazyLoad.tsx
src/service/: auth.rs
src/storage/: cookie.rs
src/store/: auth.ts  data.ts  player.ts  setting.ts  user.ts
src/styles/: index.scss  layout.module.scss  theme.scss
src/utils/: EventBus.ts  base64.ts  cookie.ts  init.ts  song.ts
src/utils/request/: request.ts
ui/: application.slint
ui/router/: index.tsx
(+68 files in other folders)
