[package]
name = "cloubit"
version = "0.0.1"
description = "Third party NetEaseCloudMusic Player"
authors = ["BiliRumble <bilirumble@outlook.com>"]
edition = "2021"

[lib]
name = "cloubit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2.4.4", features = [
    "json",
    "cookies",
    "gzip",
    "native-tls",
] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
rust-crypto = "0.2.36"
base64 = "0.22.1"
hex = "0.4.3"
openssl = "0.10"
rand = "0.9.0"
regex = "1.11.1"
lazy_static = "1.5.0"
chrono = "0.4.38"
form_urlencoded = "1.2.1"
sled = "0.34"
md5 = "0.7.0"
log = "0.4"
env_logger = "0.11.5"
cached = "0.54.0"
qrcode = "0.14.1"
uuid = { version = "1.1", features = ["v4", "serde"] }
