[package]
name = "cloubit"
version = "0.0.1"
description = "Third party NetEaseCloudMusic Player"
authors = ["BiliRumble <bilirumble@outlook.com>"]
edition = "2021"

[lib]
name = "cloubit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-http = { version = "2.4.4", features = [
    "json",
    "cookies",
    "gzip",
    "native-tls",
] }

cached = "0.55.1"
dirs = "5.0"
form_urlencoded = "1.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
sled = "0.34.7"
tokio = { version = "1.45.1", features = ["full"] }

base64 = "0.22.1"
hex = "0.4.3"
rand = "0.9.0"
regex = "1.11.1"
rust-crypto = "0.2.36"
openssl = { version = "0.10", features = ["vendored"] }

chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
